2001-10-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (CMD_XineramaSlsSize):
	fixed ABR

2001-10-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/style.c (CMD_Style):
	* fvwm/fvwm2.1
	Added the possibility to add an Xinerama screen to the 4 numerics
	Iconbox format

2001-10-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/icons.c (AutoPlaceIcon):
	Fixed a core dump with @c and fixed icon placement if the icon should
	not be on the current page

2001-10-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (AutoPlaceIcon):
	* libs/FScreen.c (FScreenParseScreenBit):
	added 'w' screen specifier for icon boxes

	* fvwm/icons.c (AutoPlaceIcon):
	fixed placement of icons in icon boxes on different screen

	* fvwm/menus.c (get_menu_options):
	reduced code duplication

2001-10-02  olicha  <olivier.chapuis@free.fr>

	* fvwm/menus.c (get_menu_options):
	fixed Xinerama placement of menu with empty but not null position hints

2001-10-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawTitle):
	* libs/defaults.h (WINDOW_TITLE_STICKY_GAP):
	suppress a warning in RelieveRectangle w/ small sticky windows

2001-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (get_menu_options):
	A 'rectangle' context rectangle for menus honours the '@screen' bit

	* fvwm/move_resize.c (DisplayPosition):
	coordinates of a window are show in relation to the screen, not the page

	* libs/FScreen.c (FScreenTranslateCoordinates):
	* fvwm/placement.c (PlaceWindow):
	* fvwm/add_window.c (setup_window_placement):
	Applied patches by Sidik Isani that adds the "fvwmscreen" X resource;
	rewrote the library functionality to better match the rest of the
	interface

	* fvwm/builtins.c (DestroyFvwmDecor):
	removed useless code

	* fvwm/icons.c (DrawIconWindow):
	fixed race condition w/ expanding/collapsing icon titles

	* fvwm/windowlist.c (CMD_WindowList):
	fixed Xinerama placement of window list when called without options

2001-09-19  Dominik Vogt  <dominik.vogt@gmx.de>
