@@ -1,3 +1,9 @@
+2001-10-08  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/borders.c (RedrawTitle):
+	Fixed drawing of leftJustified stippled title and suppress warnings
+	in RelieveRectangle w/ RightJustified stippled title
+
 2001-10-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/virtual.c (CMD_XineramaSlsSize):
